--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
+    <div class="container-fluid text-center">
         <div class="row">
             <h1>Our menu</h1>
         </div>
