--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <meta name="author" content="Luznery Vera">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </head>
@@ -91,20 +90,8 @@
                     <br> Have fun!</p>
                 <div class="myimg">
                     <img src="imgs/144px-Bootstrap_logo.svg.png" style="width: 70px;" alt="Bootstrap logo">
-                </div>
-                <!-- Container (Social Section) -->
-                <div class="wrapper">
-                    <ul class="social-icons">
-                        <li>
-                            <a class="fa fa-html5 fa-3x" aria-hidden="true"></a>
-                        </li>
-                        <li>
-                            <a class="fa fa-css3 fa-3x" aria-hidden="true"></a>
-                        </li>
-                        <li>
-                            <a class="fa fa-github fa-3x" aria-hidden="true"></a>
-                        </li>
-                    </ul>
+                    <img src="imgs/600px-JavaScript-logo.png" style="width: 70px;" alt="JavaScript logo">
+                    <img src="imgs/class-header-semantics.jpg" style="width: 93px;" alt="semantics logo">
                 </div>
             </div>
         </div>
