--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
                     <div class="img-s">
-                        <img src="imgs/sushi-1634012_1920.jpg" alt="Chicken">
+                        <img src="imgs/sushi-1634012_1920.jpg" alt="Sushi">
                     </div>
                     <p class="visible-xs">(End of Beef section) <a href="index.html" title="To Top">Back To Top</a></p>
                     <!-- Top page -->
@@ -84,7 +84,7 @@
         <div class="row">
             <div class="col-sm-12 col-md-12 bg-2">
                 <h3 class="about">ABOUT</h3>
-                <p class="content text-center">Food, LLC</p>
+                <h4 class="content text-center">Food, LLC</h4>
                 <br>
                 <p>It is a fictional Restaurant created for students of the course <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers" title="HTML, CSS and JavaScript for Web Developers" target="_blank">HTML, CSS and JavaScript for Web Developers</a> in where they can shown <code>more coding</code> using the Bootstrap framework by creating repositories in Github and publishing on <a href="https://pages.github.com/" title="Github Pages" target="_blank">Github Pages</a>.
                     <br> Have fun!</p>
@@ -98,7 +98,7 @@
     </div>
     <!-- Footer -->
     <footer class="container-fluid bg-3 text-center hover-f">
-        <a href="index.html" title="To Top">
+        <a href="index.html">
             <span class="glyphicon glyphicon-chevron-up" style="font-size: 30px;"></span>
         </a>
         <p>Coding the Static Restaurant Site for the course <a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers" title="HTML, CSS and JavaScript for Web Developers" target="_blank">HTML, CSS and JavaScript for Web Developers</a> It is the fourth course of specialization program <a href="https://www.coursera.org/specializations/ruby-on-rails" title="Ruby on Rails Web Development" target="_blank">Ruby on Rails Web Development</a> created by <a href="https://www.jhu.edu/" title="Johns Hopkins University" target="_blank">Johns Hopkins University</a> through Coursera and Made By <a href="https://twitter.com/LuzneryVera" title="@LuzneryVera" target="_blank">@LuzneryVera</a>
